# cotracker-napari-plugin

./: README.md  pyproject.toml
src/cotracker_napari_plugin/: _subprocess.py  core.py  napari.yaml  widget.py
